--- a/Modules/Gadgeteer/LedStrip/LedStrip.csproj
+++ b/Modules/Gadgeteer/LedStrip/LedStrip.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="LedStrip.md" />
     <None Include="LedStrip.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -50,6 +51,12 @@
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Gadgeteer-LedStrip-Cerberus.jpg" />
+    <Content Include="LedStrip.html">
+      <DependentUpon>LedStrip.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
