--- a/Modules/Gadgeteer/LedStrip/LedStrip.nuspec
+++ b/Modules/Gadgeteer/LedStrip/LedStrip.nuspec
@@ -16,4 +16,8 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="LedStrip.html" target="" />
+    <file src="Gadgeteer-LedStrip-Cerberus.png" target="" />
+  </files>
 </package>
