--- a/Modules/Gadgeteer/Led7C/Led7C.nuspec
+++ b/Modules/Gadgeteer/Led7C/Led7C.nuspec
@@ -16,4 +16,8 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="Led7C.html" target="" />
+    <file src="Gadgeteer-Led7C-Cerberus.png" target="" />
+  </files>
 </package>
