--- a/Modules/Gadgeteer/Led7R/Led7R.nuspec
+++ b/Modules/Gadgeteer/Led7R/Led7R.nuspec
@@ -16,4 +16,8 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="Led7R.html" target="" />
+    <file src="Gadgeteer-Led7R-Cerberus.jpg" target="" />
+  </files>
 </package>
