TIN-39 #done Add Gadgeteer Button module documentation

--- a/Modules/Gadgeteer/Button/Button.csproj
+++ b/Modules/Gadgeteer/Button/Button.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Button.md" />
     <None Include="Button.nuspec">
       <SubType>Designer</SubType>
     </None>
@@ -52,6 +53,12 @@
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Button.html">
+      <DependentUpon>Button.md</DependentUpon>
+    </Content>
+    <Content Include="Gadgeteer-Button-Cerberus.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
