--- a/Modules/Gadgeteer/DisplayN18/DisplayN18.nuspec
+++ b/Modules/Gadgeteer/DisplayN18/DisplayN18.nuspec
@@ -18,6 +18,6 @@
   </metadata>
   <files>
     <file src="DisplayN18.html" target="" />
-    <file src="Gadgeteer-DisplayN18-Cerberus.png" target="" />
+    <file src="Gadgeteer-DisplayN18-Cerberus.jpg" target="" />
   </files>
 </package>
