--- a/Modules/Others/HCSR04/HCSR04.nuspec
+++ b/Modules/Others/HCSR04/HCSR04.nuspec
@@ -19,6 +19,6 @@
   <files>
     <!-- Add documentation and image -->
     <file src="HC-SR04.html" target="" />
-    <file src="HC-SR04-Electron.png" target="" />
+    <file src="HC-SR04-Electron.jpg" target="" />
   </files>
 </package>
