--- a/Modules/Gadgeteer/LedStrip/LedStrip.nuspec
+++ b/Modules/Gadgeteer/LedStrip/LedStrip.nuspec
@@ -18,6 +18,6 @@
   </metadata>
   <files>
     <file src="LedStrip.html" target="" />
-    <file src="Gadgeteer-LedStrip-Cerberus.png" target="" />
+    <file src="Gadgeteer-LedStrip-Cerberus.jpg" target="" />
   </files>
 </package>
