Correct some typo in filename

--- a/Modules/Gadgeteer/AccelG248/AccelG248.nuspec
+++ b/Modules/Gadgeteer/AccelG248/AccelG248.nuspec
@@ -18,6 +18,6 @@
   </metadata>
   <files>
     <file src="AccelG248.html" target="" />
-    <file src="Gadgeteer-AccelG248-Cerberus.png" target="" />
+    <file src="Gadgeteer-AccelG248-Cerberus.jpg" target="" />
   </files>
 </package>
