--- a/Modules/Gadgeteer/Tunes/Tunes.nuspec
+++ b/Modules/Gadgeteer/Tunes/Tunes.nuspec
@@ -17,7 +17,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Tunes.md" target="" />
+    <file src="Tunes.html" target="" />
     <file src="Gadgeteer-Tunes-Cerberus.jpg" target="" />
   </files>
 </package>
