TIN-48 #done Add Gadgeteer Potentiometer module documentation

--- a/Modules/Gadgeteer/Potentiometer/Potentiometer.csproj
+++ b/Modules/Gadgeteer/Potentiometer/Potentiometer.csproj
@@ -44,12 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Potentiometer.md" />
     <None Include="Potentiometer.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Gadgeteer-Potentiometer-Cerberus.jpg" />
+    <Content Include="Potentiometer.html">
+      <DependentUpon>Potentiometer.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
