--- a/Modules/Gadgeteer/Potentiometer/Potentiometer.nuspec
+++ b/Modules/Gadgeteer/Potentiometer/Potentiometer.nuspec
@@ -16,4 +16,8 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="Potentiometer.html" target="" />
+    <file src="Gadgeteer-Potentiometer-Cerberus.jpg" target="" />
+  </files>
 </package>
