TIN-47 #done Add Gadgeteer LightSense module documentation

--- a/Modules/Gadgeteer/LightSense/LightSense.csproj
+++ b/Modules/Gadgeteer/LightSense/LightSense.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="LightSense.md" />
     <None Include="LightSense.nuspec">
       <SubType>Designer</SubType>
     </None>
@@ -52,6 +53,12 @@
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Gadgeteer-LightSense-Cerberus.jpg" />
+    <Content Include="LightSense.html">
+      <DependentUpon>LightSense.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
