--- a/Modules/Gadgeteer/LightSense/LightSense.nuspec
+++ b/Modules/Gadgeteer/LightSense/LightSense.nuspec
@@ -16,4 +16,8 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="LightSense.html" target="" />
+    <file src="Gadgeteer-LightSense-Cerberus.jpg" target="" />
+  </files>
 </package>
