TIN-46 #done Add Gadgeteer Gyro module documentation

--- a/Modules/Gadgeteer/Gyro/Gyro.csproj
+++ b/Modules/Gadgeteer/Gyro/Gyro.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Timer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Gyro.md" />
     <None Include="Gyro.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -51,6 +52,12 @@
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Gadgeteer-Gyro-Cerberus.jpg" />
+    <Content Include="Gyro.html">
+      <DependentUpon>Gyro.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
