--- a/Modules/Gadgeteer/Gyro/Gyro.nuspec
+++ b/Modules/Gadgeteer/Gyro/Gyro.nuspec
@@ -16,4 +16,8 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="Gyro.html" target="" />
+    <file src="Gadgeteer-Gyro-Cerberus.jpg" target="" />
+  </files>
 </package>
