TIN-45 #done Add Adafruit ColorSensor1334 module documentation
Add ability to control sensor led

--- a/Modules/Adafruit/ColorSensor1334/ColorSensor1334.csproj
+++ b/Modules/Adafruit/ColorSensor1334/ColorSensor1334.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ColorSensor1334.md" />
     <None Include="ColorSensor1334.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -50,6 +51,12 @@
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Adafruit-ColorSensor1334-PandaIII.jpg" />
+    <Content Include="ColorSensor1334.html">
+      <DependentUpon>ColorSensor1334.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
