--- a/Modules/Adafruit/ColorSensor1334/ColorSensor1334.nuspec
+++ b/Modules/Adafruit/ColorSensor1334/ColorSensor1334.nuspec
@@ -11,9 +11,13 @@
     <description>$description$</description>
     <releaseNotes>Initial release of the package.</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>TinyClr Adafruit Color Sensor</tags>
+    <tags>TinyClr Adafruit ColorSensor</tags>
     <dependencies>
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="ColorSensor1334.html" target="" />
+    <file src="Adafruit-ColorSensor1334-PandaIII.jpg" target="" />
+  </files>
 </package>
