--- a/Modules/Gadgeteer/Music/packages.config
+++ b/Modules/Gadgeteer/Music/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="GHIElectronics.TinyCLR.Core" version="0.7.0" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Devices" version="0.7.0" targetFramework="net452" />
+  <package id="GHIElectronics.TinyCLR.Storage" version="0.7.0" targetFramework="net452" />
 </packages>
