--- a/Modules/Grove/Led/Led.nuspec
+++ b/Modules/Grove/Led/Led.nuspec
@@ -17,8 +17,8 @@
     </dependencies>
   </metadata>
   <files>
-    <!-- Add documentation and image
-    <file src="UltrasonicRanger.html" target="" />
-    <file src="UltrasonicRanger-Electron.jpg" target="" />  -->
+    <!-- Add documentation and image -->
+    <file src="Led.html" target="" />
+    <file src="Led-Netduino3-with-base-shield.jpg" target="" />
   </files>
 </package>
