--- a/Modules/Grove/FourDigitDisplay/FourDigitDisplay.nuspec
+++ b/Modules/Grove/FourDigitDisplay/FourDigitDisplay.nuspec
@@ -17,8 +17,8 @@
     </dependencies>
   </metadata>
   <files>
-    <!-- Add documentation and image
-    <file src="UltrasonicRanger.html" target="" />
-    <file src="UltrasonicRanger-Electron.jpg" target="" /> -->
+    <!-- Add documentation and image -->
+    <file src="FourDigitDisplay.html" target="" />
+    <file src="FourDigitDisplay-Netduino3-with-base-shield.jpg" target="" />
   </files>
 </package>
