TIN-70 #done Add Grove Rtc module

--- a/Modules/Grove/Rtc/Rtc.csproj
+++ b/Modules/Grove/Rtc/Rtc.csproj
@@ -44,12 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Rtc.md" />
     <None Include="Rtc.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.8.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Rtc-Netduino3-with-base-shield.jpg" />
+    <Content Include="Rtc.html">
+      <DependentUpon>Rtc.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
