--- a/Modules/Grove/SerialBluetooth3/SerialBluetooth3.csproj
+++ b/Modules/Grove/SerialBluetooth3/SerialBluetooth3.csproj
@@ -45,7 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="SerialBluetooth3.nuspec" />
+    <None Include="SerialBluetooth3.md" />
+    <None Include="SerialBluetooth3.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -54,6 +57,12 @@
     <Reference Include="GHIElectronics.TinyCLR.Storage, Version=0.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Storage.0.8.0\lib\net452\GHIElectronics.TinyCLR.Storage.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SerialBluetooth3-Netduino3-with-base-shield.jpg" />
+    <Content Include="SerialBluetooth3.html">
+      <DependentUpon>SerialBluetooth3.md</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
